# agents-cli-mirror

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.cloud.toml  config.toml.example  dist-workspace.toml
.github/scripts/: e2e-install-unix.sh  e2e-install-windows.ps1  prepare-installer-cache.py
.github/workflows/: install-tests.yml  installer-release-assets.yml  mirror-cloud-sync.yml  mirror.yml  node-pty-prebuilds.yml  node-runtime.yml  rust-ci.yml
assets/: brand.toml
cloudflare/download-router/: wrangler.jsonc
cloudflare/download-router/src/: index.js
crates/acm/: Cargo.toml
crates/acm-client/: Cargo.toml  build.rs
crates/acm-client/src/: commands.rs  lib.rs  transport.rs
crates/acm-client/src/ui/: banner.rs  brand.rs  i18n.rs  logo.rs  mod.rs  output.rs  progress.rs  style.rs  text.rs
crates/acm-core/: Cargo.toml
crates/acm-core/src/: client_state.rs  config.rs  install_engine.rs  installer_cache_index.rs  lib.rs
crates/acm-core/tests/: repo_windows_arm64_support.rs
crates/acm-full/: Cargo.toml
crates/acm-full/src/: main.rs
crates/acm-installer/: Cargo.toml
crates/acm-installer/src/: main.rs
crates/acm-server/: Cargo.toml
crates/acm-server/src/: api.rs  cache.rs  config.rs  error.rs  http_client.rs  importer.rs  lib.rs  main.rs  progress.rs  provider_aliases.rs  publish.rs  retry.rs  s3.rs  s3_stub.rs  server.rs  storage_clients.rs
crates/acm-server/src/providers/: generic.rs  github.rs  mod.rs  release_core.rs  static_release.rs
crates/acm-server/src/server/: routes.rs  scripts.rs  state.rs  storage.rs
crates/acm-server/tests/: api_tests.rs
docs/plans/: 2026-03-07-agents-bin-dir.md
install/: claude.ps1  claude.sh  codex.ps1  codex.sh
scripts/: build-claude-manifest.sh  build-codex-manifest.sh  claude-code-install.ps1  claude-code-install.sh  claude-code-uninstall.ps1  claude-code-uninstall.sh  claude-install.ps1  claude-install.sh  claude-uninstall.sh  codex-install.ps1  codex-install.sh  codex-uninstall.sh  download-claude.sh  download-codex.sh  gemini-install.ps1  gemini-install.sh  gemini-uninstall.ps1  gemini-uninstall.sh  prune.sh  sync-r2.sh  sync-secondary-s3.sh
workers/refresh-dispatch/: wrangler.toml
workers/refresh-dispatch/src/: index.ts
