[package]
name = "acm-client"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "ACM local client"
license = "AGPL-3.0"
repository = "https://github.com/wangnov/agents-cli-mirror"
autobins = false

[features]
default = []
s3 = ["acm-server/s3"]

[package.metadata.dist]
dist = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "acm-client"
path = "src/main.rs"

[dependencies]
acm-core = { path = "../acm-core", version = "0.1.3" }
acm-server = { path = "../acm-server", version = "0.1.3", default-features = false }
anyhow = "1"
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "stream", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
time = { version = "0.3", features = ["formatting"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
urlencoding = "2.1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
