[package]
name = "acm-full"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "ACM full client binary wrapper (includes s3 support)"
license = "AGPL-3.0"
repository = "https://github.com/wangnov/agents-cli-mirror"
publish = false

[package.metadata.dist]
dist = true

[[bin]]
name = "acm-full"
path = "src/main.rs"

[dependencies]
acm-client = { path = "../acm-client", version = "0.1.3", features = ["s3"] }
