[package]
name = "acm"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "ACM lite client binary wrapper"
license = "AGPL-3.0"
repository = "https://github.com/wangnov/agents-cli-mirror"
publish = false

[package.metadata.dist]
dist = true

[[bin]]
name = "acm"
path = "src/main.rs"

[dependencies]
acm-client = { path = "../acm-client", version = "0.1.1" }
